--- a/index.html
+++ b/index.html
@@ -61,69 +61,77 @@
     <meta name="apple-mobile-web-app-title" content="Vanilla JS" />
 
     <!-- JS -->
-    <script src="./script.js" defer></script>
-    <script src="./main.js" defer></script>
+    <script type="module" src="./scripts/main.js"></script>
   </head>
 
-  <body class="background-image d-flex flex-column vh-100 vw-100">
+  <body class="background-image d-flex flex-column min-vh-100">
     <header
-      class="bg-white d-flex h-[600rem]"
-      style="height: 600rem !important"
+      class="bg-white d-flex flex-column flex-md-row align-items-center justify-content-between w-100 px-5"
+      style="height: auto; min-height: 25rem"
     >
-      <div>
-        <h1 class="display-2" id="typewriter">
-          <span class="cursor"></span>
+      <div class="text-center text-md-start">
+        <h1 class="display-2 w-75 mx-auto mx-md-0" id="typewriter">
+          Web Development Vanilla JavaScript
+          <span class="text-cursor"></span>
         </h1>
       </div>
-      <img src="./assets/icons/js.svg" />
+
+      <div class="mt-3 mt-md-0">
+        <img
+          class="shadow-svg img-fluid"
+          src="./assets/icons/js.svg"
+          alt="JS"
+        />
+      </div>
     </header>
 
-    <main class="">
-      <section class="d-flex justify-content-center gap-5">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h2 class="card-title">
-              To-do
-              <small class="text-body-secondary">Application</small>
-            </h2>
+    <main class="flex-grow-1 container py-5">
+      <section class="row g-4 justify-content-center">
+        <div class="col-md-6 col-lg-5 w-50">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">
+                To-do <small class="text-body-secondary">Application</small>
+              </h2>
+            </div>
+
+            <iframe
+              class="card-img-bottom custom-iframe"
+              src="./apps/to-do-app/index.html"
+              scrolling="yes"
+              title="To-Do Application"
+              loading="lazy"
+            ></iframe>
           </div>
-          <iframe
-            class="card-img-bottom"
-            src="./apps/to-do-app/index.html"
-            width="800rem"
-            height="600rem"
-            scrolling="yes"
-            title="To-Do Application"
-          ></iframe>
         </div>
 
-        <div class="card mb-3">
-          <div class="card-body">
-            <h2 class="card-title">
-              Color Flipper
-              <small class="text-body-secondary">Application</small>
-            </h2>
+        <div class="col-md-6 col-lg-5 w-50">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">
+                Color Flipper
+                <small class="text-body-secondary">Application</small>
+              </h2>
+            </div>
+
+            <iframe
+              class="card-img-bottom custom-iframe"
+              src="./apps/color-flipper-app/index.html"
+              scrolling="yes"
+              title="Color Flipper Application"
+              loading="lazy"
+            ></iframe>
           </div>
-          <iframe
-            class="card-img-bottom"
-            src="./apps/to-do-app/index.html"
-            width="800rem"
-            height="600rem"
-            scrolling="yes"
-            title="To-Do Application"
-          ></iframe>
         </div>
       </section>
     </main>
 
     <footer
-      class="bg-white d-flex flex-column justify-content-center align-items-center"
+      class="bg-white d-flex flex-column justify-content-center align-items-center py-3"
     >
-      <small>
-        <i>Petar Gašparić &copy;</i>
-      </small>
+      <small><i>Petar Gašparić &copy;</i></small>
 
-      <a href="mailto:gasparic.petar@gmail.com" title="E-mail link">
+      <a href="mailto:gasparic.petar@gmail.com" class="text-decoration-none">
         gasparic.petar@gmail.com
       </a>
     </footer>
