--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
 
     <!-- Title -->
-    <title>Web Development Vanilla Javascript</title>
+    <title>Web Development Vanilla JavaScript</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -60,67 +60,66 @@
     <link rel="manifest" href="./assets/favicon/site.webmanifest" />
     <meta name="apple-mobile-web-app-title" content="Vanilla JS" />
 
-    <!-- JS -->
+    <!-- Scripts -->
     <script type="module" src="./scripts/main.js"></script>
   </head>
 
   <body class="background-image d-flex flex-column min-vh-100">
     <header
       class="bg-white d-flex flex-column flex-md-row align-items-center justify-content-between w-100 px-5"
-      style="height: auto; min-height: 25rem"
     >
       <div class="text-center text-md-start">
         <h1 class="display-2 w-75 mx-auto mx-md-0" id="typewriter">
           Web Development Vanilla JavaScript
-          <span class="text-cursor"></span>
+          <span class="text-cursor d-inline-block"></span>
         </h1>
       </div>
 
-      <div class="mt-3 mt-md-0">
+      <div class="p-4">
         <img
-          class="shadow-svg img-fluid"
+          class="img-fluid img-svg flex-shrink-0 w-auto h-auto"
           src="./assets/icons/js.svg"
           alt="JS"
         />
       </div>
     </header>
 
-    <main class="flex-grow-1 container py-5">
-      <section class="row g-4 justify-content-center">
-        <div class="col-md-6 col-lg-5 w-50">
+    <main class="container-fluid flex-grow-1 py-5">
+      <section class="row justify-content-center g-4">
+        <div class="col-12 col-md col-xl-5">
           <div class="card">
             <div class="card-body">
-              <h2 class="card-title">
+              <h2 class="card-title primary-text">
                 To-do <small class="text-body-secondary">Application</small>
               </h2>
-            </div>
 
-            <iframe
-              class="card-img-bottom custom-iframe"
-              src="./apps/to-do-app/index.html"
-              scrolling="yes"
-              title="To-Do Application"
-              loading="lazy"
-            ></iframe>
+              <iframe
+                title="To-Do Application"
+                class="card-img-bottom custom-iframe"
+                src="./apps/to-do-app/index.html"
+                loading="lazy"
+                scrolling="yes"
+              ></iframe>
+            </div>
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-5 w-50">
+        <div class="col-12 col-md col-xl-5">
           <div class="card">
             <div class="card-body">
-              <h2 class="card-title">
+              <h2 class="card-title primary-text">
                 Color Flipper
                 <small class="text-body-secondary">Application</small>
               </h2>
-            </div>
 
-            <iframe
-              class="card-img-bottom custom-iframe"
-              src="./apps/color-flipper-app/index.html"
-              scrolling="yes"
-              title="Color Flipper Application"
-              loading="lazy"
-            ></iframe>
+              <iframe
+                title="Color Flipper Application"
+                class="card-img-bottom custom-iframe"
+                src="./apps/color-flipper-app/index.html"
+                loading="lazy"
+                scrolling="yes"
+              ></iframe>
+            </div>
           </div>
         </div>
       </section>
@@ -131,9 +130,12 @@
     >
       <small><i>Petar Gašparić &copy;</i></small>
 
-      <a href="mailto:gasparic.petar@gmail.com" class="text-decoration-none">
-        gasparic.petar@gmail.com
-      </a>
+      <p>
+        Mail to:
+        <a href="mailto:gasparic.petar@gmail.com" class="primary-link">
+          gasparic.petar@gmail.com
+        </a>
+      </p>
     </footer>
   </body>
 </html>
