Refactored todo app from css to bootstrap 5.3

--- a/index.html
+++ b/index.html
@@ -12,16 +12,7 @@
     />
     <meta name="author" content="Petar Gašparić" />
     <meta name="copyright" content="Petar Gašparić" />
-    <meta
-      name="theme-color"
-      content="#ffffff"
-      media="(prefers-color-scheme: light)"
-    />
-    <meta
-      name="theme-color"
-      content="#111111"
-      media="(prefers-color-scheme: dark)"
-    />
+    <meta name="theme-color" content="#323330" />
 
     <!-- Title -->
     <title>Web Development Vanilla JavaScript</title>
@@ -95,7 +86,7 @@
 
               <iframe
                 title="To-Do Application"
-                class="card-img-bottom custom-iframe"
+                class="card-img-bottom custom-iframe border border-dark rounded"
                 src="./apps/to-do-app/index.html"
                 loading="lazy"
                 scrolling="yes"
@@ -114,7 +105,7 @@
 
               <iframe
                 title="Color Flipper Application"
-                class="card-img-bottom custom-iframe"
+                class="card-img-bottom custom-iframe border border-dark rounded"
                 src="./apps/color-flipper-app/index.html"
                 loading="lazy"
                 scrolling="yes"
