--- a/apps/to-do-app/index.html
+++ b/apps/to-do-app/index.html
@@ -2,32 +2,45 @@
 <html lang="en" data-framework="javascript">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="To-do application." />
     <meta name="author" content="Petar Gašparić" />
-    <meta name="copyright" content="Petar Gašparić copyright" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="copyright" content="Petar Gašparić" />
+    <meta name="theme-color" content="#f0db4f" />
+    <title>To-Do Application</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Poller+One&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>To-Do Application</title>
-    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
   </head>
-  <body>
-    <main>
-      <section>
-        <h2>My tasks</h2>
-        <input type="text" placeholder="Add todo" id="newInput" autofocus />
-        <button onclick="addNewTask()" class="addButton">Add</button>
+  <body
+    class="vh-100 vw-100 d-flex flex-column justify-content-center align-items-center"
+  >
+    <main class="d-flex flex-column">
+      <section class="p-5 mb-4 bg-white border border-dark border-1 rounded-5">
+        <h2 class="d-flex justify-content-center">My tasks</h2>
+
+        <div class="input-group mb-3">
+          <input
+            class="form-control"
+            placeholder="Add todo"
+            id="newInput"
+            type="text"
+            autofocus
+          />
+          <button class="btn btn-dark" id="addButton" type="button">Add</button>
+        </div>
+
         <ul class="todoList"></ul>
       </section>
     </main>
